--- a/client/angular.json
+++ b/client/angular.json
@@ -9,7 +9,8 @@
         "@schematics/angular:component": {
           "style": "scss",
           "skipTests": true,
-          "standalone": true
+          "standalone": true,
+          "changeDetection": "OnPush"
         },
         "@schematics/angular:class": {
           "skipTests": true
